[package]
name = "imprint"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
indicatif = "0.17"
jwalk = "0.8"
rayon = "1"
redb = "2"
reflink = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
